<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/boneicon1"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/iconDesc"
                app:srcCompat="@drawable/icon" />

            <EditText
                android:id="@+id/username2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:hint="@string/username"
                android:inputType="text" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:hint="@string/password"
                android:inputType="text|textPassword" />

            <Button
                android:id="@+id/btnSignIn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/btnSignIn1" />

            <Button
                android:id="@+id/btnSignUp1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/btnSignUp2" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>