<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:context="com.example.mapwithmarker.MapsMarkerActivity"
                />

            <TextView
                android:id="@+id/selectedCoord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/txtCoord2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtCoord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/txtCoord1"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/locations"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:entries="@array/locations" />

            <Button
                android:id="@+id/btnLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/displaySelected" />

            <Button
                android:id="@+id/setCoord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updateCoord" />

            <ImageView
                android:id="@+id/locationImage"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:contentDescription="@string/iconDesc" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>